tryphon_macros/tests/ui/fail/decoder_multi_field.rs
use tryphon::ConfigValueDecoder;

#[derive(ConfigValueDecoder)]
struct BadNewtype {
    x: String,
    y: i32,
}

fn main() {}
